@@ -14,6 +14,9 @@ HISTORY
 
   ++ Bugfixes:
 
+  2016-11-25: Simon Goldschmidt
+  * dhcp.c: fixed bug #49676 (Possible endless loop when parsing dhcp options)
+
   2016-11-23: Dirk Ziegelmeier
   * udp.c: fixed bug #49662: multicast traffic is now only received on a UDP PCB
    (and therefore on a UDP socket/netconn) when the PCB is bound to IP_ADDR_ANY
